# mathic

./: .hgignore  Makefile  Makefile.am  TODO.example  configure.ac  mathic.h
archlinux/: PKGBUILD
divsim/: DivListModel.h  KDTreeModel.h  Makefile.am  Simulation.cpp  Simulation.h  TODO  divMain.cpp
example/: div.cpp
libs/: readme
mathic/: Action.cpp  Action.h  BinaryKDTree.h  BoolParameter.cpp  BoolParameter.h  CliParameter.cpp  CliParameter.h  CliParser.cpp  CliParser.h  ColumnPrinter.cpp  ColumnPrinter.h  ComTree.h  DivFinder.h  DivList.h  DivMask.cpp  DivMask.h  ElementDeleter.cpp  ElementDeleter.h  GeoFront.h  Geobucket.h  Heap.h  HelpAction.cpp  HelpAction.h  IntegerParameter.cpp  IntegerParameter.h  KDEntryArray.h  KDTree.h  NameFactory.cpp  NameFactory.h  PackedKDTree.h  StlSet.h  StringParameter.cpp  StringParameter.h  Timer.cpp  Timer.h  TourTree.h  display.cpp  display.h  error.cpp
pqsim/: GeobucketModel.h  HeapModel.h  Makefile.am  Model.h  Simulator.cpp  Simulator.h  StlSetModel.h  TourTreeModel.h  pqMain.cpp
src/: Action.cpp  Action.h  Arena.cpp  Arena.h  ArenaVector.h  BinaryKDTree.h  BoolParameter.cpp  CliParser.cpp  CliParser.h  ColumnPrinter.cpp  ColumnPrinter.h  ComTree.h  Comparer.h  DivFinder.h  DivList.h  DivListModel.h  DivMask.cpp  DivMask.h  ElementDeleter.h  GeoFront.h  Geobucket.h  Heap.h  KDEntryArray.h  KDTree.h  KDTreeLeaf.h  KDTreeModel.h  KDTreeWalker.h  LocalArray.h  MemoryBlocks.h  Monomial.h  NameFactory.h  PackedKDTree.h  Simulation.cpp  Simulation.h  StlSet.h  Timer.cpp  Timer.h  TourTree.h  all.cpp  display.cpp  (+2 more)
(+45 files in other folders)
