ACLOCAL_AMFLAGS = -I ../m4

AM_CPPFLAGS = -I${top_srcdir}/
AM_LDFLAGS=${top_builddir}/libmathic.la 

# TESTS=pqsim
# check_PROGRAMS=$(TESTS)

EXTRA_PROGRAMS=pqsim

pqsim_SOURCES=pqMain.cpp Item.cpp Model.cpp Simulator.cpp \
GeobucketModel.h HeapModel.h Item.h Model.h pqMain.h \
Simulator.h stdinc.h StlSetModel.h TourTreeModel.h
